--- a/index.html
+++ b/index.html
@@ -9,16 +9,43 @@
 <body>
     <header>
         <nav>
-            <h3>Gamer</h3>
+            <h3 class="nav-title"> <img src="images/Frame.png" alt=""><span class="text-nav">G</span>amer</h3>
             <ul>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Developers</a></li>
-                <li><button>Follow us on</button></li>
+                <li><button class="nav-button"><img src="images/Vector.png" alt="">Follow us on</button></li>
             </ul>
         </nav>
     </header>
     <main>
-
+    <div class="section-2">
+        <div class="part-1">
+            <h2 class="main-text1">PLAY LIKE THE</h2>
+            <h1 class="main-text2">G.O.A.T</h1>
+            <p><img src="images/Frame (2).png" alt="">1-click instant play</p>
+            <p><img src="images/Frame (1).png" alt="">No Download</p>
+            <p><img src="images/Frame(3).png" alt="">1000s of supported online games</p>
+            <ul class="btn-primary">
+                <button class="button-2">Sign In</button>
+                <button class="button-3">Go Rouge</button>
+            </ul>
+        </div>
+     <div class="img-main">
+        <img src="images/Group 18.png" alt="">
+     </div>
+    </div>
+    <div class="section-3">
+        <div class="main-img2">
+            <img src="images/pngwing 4.png" alt="">
+        </div>
+        <div class="main-div2">
+            <h2 class="main-text3">We are gamer</h2>
+            <p class="main-para">An international digital games and entertainment company. <br> We develop, publish and distribute multiplayer mobile games. <br> We reach over 400 million players each month and our audience keeps growing.</p>
+            <button class="btn4">KNOW MORE</button>
+            <p class="special-1">Our purpose...</p>
+            <p class="special-2">“unleash the gamer in everyone”</p>
+        </div>
+    </div>
     </main>
     <footer>
 
