added the footer section

--- a/index.html
+++ b/index.html
@@ -46,9 +46,59 @@
             <p class="special-2">“unleash the gamer in everyone”</p>
         </div>
     </div>
+    <div>
+    <div class="cards">
+        <h2><span class="main-text6">Online Games</span> <span class="main-text5">Funny Videos</span></h2>
+        <p class="extra-text">A Collection of Hilarious Videos to Brighten Your Day</p>
+    </div>
+    <div class="container">
+        <div class="main-text4">
+            <img src="images/Rectangle 4.png" alt="">
+            <p>No Download. No Installs. Play games <br> Instantly on Gamer.</p>
+        </div>
+        <div>
+            <img src="images/Rectangle 5.png" alt="">
+            <p>Did you score? #unblockedgames<br>#school</p>
+        </div>
+        <div>
+            <img src="images/Rectangle 7.png" alt="">
+            <p>Breaking game records<br>like OG</p>
+        </div>
+        <div>
+            <img src="images/Rectangle 6.png" alt="">
+            <p>Busted gaming on school laptop,<br>but you are still lit.</p>
+        </div>
+    </div>
+    <div class="main-img3">
+        <div class="down-section">
+            <h2><span class="extra-text2">Play Instantly,</span><br> No Download <br> No Installs.</h2>
+            <p>Play games online for free without downloading. <br> Just click the Play button <br> and play instantly in your browser.</p>
+        </div>
+        <div>
+            <img src="images/Rectangle 55.png" alt="">
+            <img class="mover" src="images/Rectangle 66.png" alt="">
+        </div>
+    </div>
     </main>
     <footer>
-
+        <div class="last-part">
+            <div>
+                <h3 class="footer-title"> <img src="images/Frame.png" alt=""><span class="footer-title">G</span>amer</h3>
+                <ul>
+                    <li><a href="">Our story</a></li>
+                    <li><a href="">Games</a></li>
+                    <li><a href="">Web Games</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Support</a></li>
+                    <li><a href="">My Account</a></li>
+                </ul>
+            </div>
+            <div class="footer-img">
+                <img src="images/facebook 1.png" alt="">
+                <img src="images/twitter 1.png" alt="">
+                <img src="images/Group 49.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
